<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="9dp"
        android:id="@+id/image_1"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:src="@drawable/listview_device"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Device"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mac"
        android:textSize="12sp"
        />
    <TextView
        android:id="@+id/electorycitys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Electorycity"
        android:textSize="12sp"
        />
    </LinearLayout>
</LinearLayout>