<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="9dp"
        android:id="@+id/image_5"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:src="@drawable/listview_log"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/log_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Log_type"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/log_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Log_device"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/log_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Log_time"
            android:textSize="12sp"
            />
    </LinearLayout>
</LinearLayout>