<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="8dp"
        android:id="@+id/image_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/listview_warning"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/alarm_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alarm_type"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/alarm_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alarm_device"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/alarm_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="告警信息："/>
        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alarm_time"
            android:textSize="12sp"
            />
    </LinearLayout>
</LinearLayout>